[package]
name = "debug-flash-swaps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.15"
secp256k1 = { version = "0.20", features = ["recovery"] }
web3 = "0.17"
ethers-core = { version = "0.6" }
ethers-signers = { version = "0.6" }
web3-tools = { path = "../web3-tools" }
ethers-tools = { path = "../ethers-tools" }
neonevm-sdk = { path = "../neonevm-sdk" }
